# tog

./: .ghci  .gitignore  Makefile  README.md  tc.cabal  test  test.sh  tog  tog.cabal  tog.hs
cbits/: time-osx.c  time-posix.c  time-windows.c
examples/: Basic.agda  CurryMeta.agda  Hier.agda  Ids2.agda  InvertFunction.agda  Language.agda  Language_test1.agda  Language_test3.agda  LateMetaVariableInstantiation.agda  NestedProjections.agda  Prelude.agda
examples-notworking/: Language.agda
examples/bugs/: Invariants.agda  Language_test4.agda
examples/featuremissing/: Brandon.agda  Hier.agda
examples/shouldfail/: EmptyPattern.agda  MultipleImplicits.agda  Shadowing.agda  Shadowing2.agda
examples/shouldwork/: ImplInTheMiddle.agda
examples/working/: Basic.agda  CurryMeta.agda  CurryWhenPruning.agda  EmptyPattern.agda  EtaExpandVarsAndMeta.agda  HierReduced.agda  Intersection.agda  Invariants.agda  InvertFunction.agda  Language_test1.agda  Language_test2.agda  Modules.agda  Nested.agda  NestedProjections.agda  Record.agda  StuckDomains.agda  Vec.agda  Where.agda
papers/: Makefile  lipics.cls  permamake.sh  talk.lhs  type-checking-metas.bib  type-checking-metas.lhs
src/: Abstract.hs  Check.hs  CheckFile.hs  Conf.hs  Elaborate.hs  Error.hs  Eval.hs  Instrumentation.hs  Main.hs  Monad.hs  Names.hs  Parse.hs  PrettyPrint.hs  Raw.hs  ScopeCheck.hs  ScopeTest.hs  Syntax.hs  Term.hs  Test.hs  Timing.hs  TogPrelude.hs  TypeCheck.hs  TypeCheck2.hs  TypeCheck3.hs  Unify.hs  impossible.h
src-francesco/: Check.hs  Makefile
src-francesco/Impl/: LazySimpleScope.hs
src-francesco/Types/: Context.hs  Monad.hs  Telescope.hs
src-francesco/Types/Monad/: Base.hs
src/Data/: Bwd.hs  Collect.hs  IsList.hs
src/Instrumentation/: Conf.hs  Debug.hs  Timing.hs
src/Main/: Common.hs  Test.hs
src/Monad/: Base.hs
src/Prelude/: Extended.hs
src/Raw/: Raw.cf
src/Syntax/: Abstract.hs  Internal.hs  Raw.cf  Raw.hs
src/Syntax/Abstract/: Abs.hs  Scope.hs
src/Syntax/Internal/: Abs.hs  Scope.hs
src/Term/: Class.hs  Context.hs  Definition.hs  Eval.hs  FreeVars.hs  Impl.hs  MetaVar.hs  MetaVars.hs  MonadTerm.hs  Nat.hs  Nf.hs  Pretty.hs  Signature.hs  Signature.hs-boot  Subst.hs  Substitution.hs  Synonyms.hs  Telescope.hs  Telescope.hs-boot  TermM.hs  Testing.hs  Types.hs  Utils.hs  Var.hs
src/Term/Context/: Utils.hs
src/Term/Definition/: Utils.hs
src/Term/Impl/: Common.hs  EasyWeaken.hs  GraphReduce.hs  GraphReduceSub.hs  GraphReduceUnpack.hs  Hashed.hs  LazyScope.hs  LazySimpleScope.hs  Simple.hs
src/Term/Subst/: Types.hs  Utils.hs
src/Term/Substitution/: Types.hs  Utils.hs
src/Term/Telescope/: Types.hs  Utils.hs
src/Text/PrettyPrint/: Extended.hs
src/Tog/: Abstract.hs  CheckFile.hs  Elaborate.hs  Error.hs  Instrumentation.hs  Main.hs  Monad.hs  Names.hs  Parse.hs  Prelude.hs  PrettyPrint.hs  Raw.hs  ScopeCheck.hs  Syntax.hs  Term.hs  TypeCheck.hs  Unify.hs
src/Tog/Instrumentation/: Conf.hs  Debug.hs  Timing.hs
src/Tog/Raw/: Raw.cf
src/Tog/Term/: FreeVars.hs  Impl.hs  MetaVars.hs  Pretty.hs  Subst.hs  Synonyms.hs  Types.hs
src/Tog/Term/Impl/: Common.hs  GraphReduce.hs  GraphReduceUnpack.hs  Hashed.hs  Simple.hs
src/Tog/Unify/: Common.hs  Simple.hs
src/TypeCheck/: Monad.hs
src/TypeCheck2/: Common.hs  Core.hs  Elaborate.hs  Monad.hs
src/TypeCheck3/: Check.hs  Check.hs-boot  Common.hs  Core.hs  Elaborate.hs  Monad.hs  Monad.hs-boot  Solve.hs
src/TypeCheck3/Solve/: Common.hs  Hetero.hs  Simple.hs  TwoContexts.hs
src/Types/Monad/: Base.hs
src/Unify/: Common.hs  Simple.hs
tests/succeed/: EtaExpandVarsAndMeta.agda  StuckDomains.agda  Test.agda
