name:                tc
version:             0.1.0.0
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
build-type:          Simple
cabal-version:       >= 1.10

executable tc
  main-is:             Main.hs
  other-modules:       Syntax.Raw.Lex
                     , Syntax.Raw.Par

  build-depends:       base >= 4.7
                     , array >= 0.4
                     , containers >= 0.5
                     , hashable >= 1.2
                     , hashtables >= 1.1
                     , lens >= 4.4
                     , mtl >= 2.1
                     , optparse-applicative >= 0.9
                     , transformers >= 0.2
                     , transformers-compat >= 0.3
                     , unordered-containers >= 0.2
                     , wl-pprint >= 1.1

  hs-source-dirs:      src, bnfc
  default-language:    Haskell2010
  ghc-options:         -Wall
  -- ghc-options:         -Wall -prof -fprof-auto -fprof-auto-calls

  build-tools:         alex, happy

  default-extensions:  DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , PatternGuards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , UnicodeSyntax
