name:                tog
version:             0.1.0.0
license:             BSD3
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 7.6.3
                     GHC == 7.8.3

executable tog
  main-is:             Main.hs
  other-modules:       Syntax.Raw.Lex
                     , Syntax.Raw.Par

  build-depends:       base >= 4.6
                     , array >= 0.4
                     , containers >= 0.5
                     , hashable >= 1.2
                     , hashtables >= 1.1
                     , haskeline >= 0.7
                     , lens >= 4.4
                     , mtl >= 2.1
                     , nats >= 0.2
                     , optparse-applicative >= 0.11
                     , safe >= 0.3.8
                     , split >= 0.2
                     , tagged >= 0.7.2
                     , transformers >= 0.2
                     , transformers-compat >= 0.3
                     , unordered-containers >= 0.2
                     , wl-pprint >= 1.1
                     , boxes >= 0.1

  hs-source-dirs:      src, bnfc
  default-language:    Haskell2010
  ghc-options:         -Wall
  ghc-prof-options:    -auto-all

  build-tools:         alex, happy

  default-extensions:  BangPatterns
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , PatternGuards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , UnicodeSyntax
