name:                tog
version:             0.1.0
license:             BSD3
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 7.6.3
                     GHC == 7.8.3

executable tog
  main-is:             Main.hs
  other-modules:       Raw.Lex
                     , Raw.Par

  build-depends:       array >= 0.4
                     , base >= 4.6
                     , bifunctors >= 4.1.1.1
                     , boxes >= 0.1
                     , containers >= 0.5
                     , either >= 4.3.2
                     , hashable >= 1.2
                     , hashtables >= 1.1
                     , lens >= 4.4
                     , mtl >= 2.1
                     , nats >= 0.2
                     , optparse-applicative >= 0.11
                     , profunctors >= 4.3
                     , safe >= 0.3.8
                     , semigroups >= 0.15
                     , split >= 0.2
                     , tagged >= 0.7.2
                     , transformers >= 0.2
                     , transformers-compat >= 0.3
                     , unordered-containers >= 0.2
                     , wl-pprint >= 1.1

  hs-source-dirs:      src, bnfc
  include-dirs:        src
  default-language:    Haskell2010
  ghc-options:         -Wall -O
  ghc-prof-options:    -auto-all

  if os(darwin)
    c-sources: cbits/time-osx.c
  else {
    if os(windows)
      c-sources: cbits/time-windows.c
    else
      c-sources: cbits/time-posix.c
  }

  cc-options:          -fPIC

  build-tools:         alex, happy

  default-extensions:  BangPatterns
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , PatternGuards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , UnicodeSyntax
